--- a/web.html
+++ b/web.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
-<h1>tadanosame.com</h1>
-<h2>ただのサメ</h2>
-<p>どうもただのサメです</p>
-<p>Discord名:ただのサメ#2576</p>
+<html lang="ja" data-rh="lang">
+<head><h1>tadanosame.com</h1>
+</head>
+<body><h2>ただのサメ</h2>
+    <p>どうもただのサメです</p>
+    <p>Discord名:ただのサメ#2576</p>
+    </body>
+</html>
