--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<html>
-<head><h1>tadanosame.com</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>ただのサメ公式</title>
+    <h1>tadanosame.com</h1>
+    <meta name="title" content="ただのサメ公式">
 </head>
-<body><h2>ただのサメ</h2>
+<body>
+    <h2>ただのサメ</h2>
     <p>どうもただのサメです</p>
     <p>Discord名:ただのサメ#2576</p>
     </body>
