--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <title>ただのサメ公式</title>
     <h1>tadanosame.com</h1>
+    <meta name="title" content="ただのサメ公式">
 </head>
 <body>
     <h2>ただのサメ</h2>
-    <p>どうもただのサメです</p>
+    <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
+    <p>どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
+    </p>
     <p>Discord名:ただのサメ#2576</p>
+    <p>Discord Server: <a href="https://discord.gg/NKeX6Tj64x">こちら</a></p>
     </body>
 </html>
