--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <h2>ただのサメ</h2>
     <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
-    <p>どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
+    <p>
+        どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
     </p>
-    <p>Discord名:ただのサメ#2576</p>
-    <p>Discord Server: <a href="https://discord.gg/NKeX6Tj64x">こちら</a></p>
+    <p>Discordアカウント:<a href="https://discordapp.com/users/919197166306754602">こちら</a></p>
+    <p>Discord Server:<a href="https://discord.gg/NKeX6Tj64x">こちら</a></p>
     </body>
 </html>
