--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     </p>
     <p>Discordアカウント:<a href="https://discordapp.com/users/919197166306754602">こちら</a></p>
     <p>Discord Server:<a href="https://discord.gg/NKeX6Tj64x">こちら</a></p>
+    <p>Qiita:<a href="https://qiita.com/tadanosame">こちら</a></p>
     </body>
 </html>
