--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>ただのサメ公式</title>
     <h1>tadanosame.com</h1>
     <meta name="title" content="ただのサメ公式">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3781631515365197"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h2>ただのサメ</h2>
