--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKQR1FMHJ0"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HKQR1FMHJ0');
+</script>
     <title>ただのサメ公式</title>
     <h1>tadanosame.com</h1>
     <meta name="title" content="ただのサメ公式">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3781631515365197"
-     crossorigin="anonymous"></script>
 </head>
 <body>
     <h2>ただのサメ</h2>
