--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKQR1FMHJ0"></script>
     <script>
@@ -15,14 +16,17 @@
     <h1>tadanosame.com</h1>
     <meta name="title" content="ただのサメ公式">
 </head>
+
 <body>
     <h2>ただのサメ</h2>
     <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
     <p>
         どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
     </p>
-    <p>Discordアカウント:<a href="https://discordapp.com/users/919197166306754602">こちら</a></p>
+    <a href="https://discordapp.com/users/919197166306754602" class="btn">Discord Account</a>
+    
     <p>Discord Server:<a href="https://discord.gg/NKeX6Tj64x">こちら</a></p>
     <p>Qiita:<a href="https://qiita.com/tadanosame">こちら</a></p>
-    </body>
+</body>
+
 </html>
