--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKQR1FMHJ0"></script
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKQR1FMHJ0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -16,7 +16,7 @@
     <h1>tadanosame.com</h1>
     <meta name="title" content="ただのサメ公式">
 </head>
-
+    
 <body>
     <h2>ただのサメ</h2>
     <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
@@ -28,5 +28,4 @@
     <p>Discord Server:<a href="https://discord.gg/NKeX6Tj64x">こちら</a></p>
     <p>Qiita:<a href="https://qiita.com/tadanosame">こちら</a></p>
 </body>
-
 </html>
