--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>tadanosame.com</h1>
     <meta name="title" content="ただのサメ公式">
 </head>
-    
+
 <body>
     <h2>ただのサメ</h2>
     <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
@@ -24,8 +24,7 @@
         どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
     </p>
     <a href="https://discordapp.com/users/919197166306754602" class="btn">Discord Account</a>
-    
-    <p>Discord Server:<a href="https://discord.gg/NKeX6Tj64x">こちら</a></p>
-    <p>Qiita:<a href="https://qiita.com/tadanosame">こちら</a></p>
+    <a href="https://discord.gg/NKeX6Tj64x" class="btn">Discord Server</a>
+    <a href="https://qiita.com/tadanosame" class="btn">Qiita</a>
 </body>
 </html>
