--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 
 <body>
-    <h1>tadanosame.com</h1>
+    <h1>Hi,I'm tadanosame.</h1>
     <h2>ただのサメ</h2>
     <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
     <p>
         どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
     </p>
     <a href="https://discordapp.com/users/919197166306754602" class="btn">Discord Account</a>
-    <a href="https://discord.gg/NKeX6Tj64x" class="btn">Discord Server</a>
-    <a href="https://qiita.com/tadanosame" class="btn">Qiita</a>
+    <a href="https://discord.gg/NKeX6Tj64x" class="a">Discord Server</a>
+    <a href="https://qiita.com/tadanosame" class="a">Qiita</a>
 </body>
 </html>
