--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
     </p>
     <a href="https://discordapp.com/users/919197166306754602" class="btn">Discord Account</a>
-    <a href="https://discord.gg/NKeX6Tj64x" class="a">Discord Server</a>
-    <a href="https://qiita.com/tadanosame" class="a">Qiita</a>
+    <br>
+    <a href="https://discord.gg/NKeX6Tj64x" class="btn">Discord Server</a>
+    <br>
+    <a href="https://qiita.com/tadanosame" class="btn">Qiita</a>
 </body>
 </html>
