--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <h1>Hi, I'm tadanosame.</h1>
     </div>
-    <h2>ただのサメ</h2>
+    <h2 class="text-center">ただのサメ</h2>
     <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
     <p>
         どうもただのサメです。お名前ドットコムで無料だったんで買いました。html,CSS勉強中です。
