--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
         gtag('config', 'G-HKQR1FMHJ0');
     </script>
-    <title>ただのサメ</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>tadanosame official</title>
 </head>
 
 <body>
