--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     </script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>tadanosame official</title>
+    <meta name="description" lang="ja" content="ただの公式サイト。">
+    <!-- OGP -->
+    <meta property="og:locale" content="ja_JP">
+    <meta property="og:type" content="article">
+    <meta property="og:type" content="article">
+    <meta property="og:site_name" content="tadanosame.com">
+    <meta property="og:url" content="https://www.splashtop.co.jp/knowhow/30/">
+    <meta property="og:title" content="ただのサメ公式サイト">
+    <meta property="og:description" content="ただの公式サイト。">
 </head>
 
 <body>
