--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="article">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="tadanosame.com">
-    <meta property="og:url" content="https://www.splashtop.co.jp/knowhow/30/">
+    <meta property="og:url" content="https://tadanosame.com">
     <meta property="og:title" content="ただのサメ公式サイト">
     <meta property="og:description" content="ただの公式サイト。">
 </head>
