--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="container">
-        <h1>Hi, there 👋<br>My name is "tadanosame"</h1>
+        <h1>Hi, there 👋<br>My name is "tadanosame"<br>↓</h1>
     </div>
     <h2 class="text-center">ただのサメ</h2>
     <img src="https://cdn.discordapp.com/attachments/989780394033414184/1096449846044524584/0fd1958aea0be2eb02ab3ebb816603b7.png">
