h2改行をやめた

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
     <div class="main">
       <div class="copy-container">
         <h1>HELLO WORLD<span>.</span></h1>
-        <h2>ただのサメは</h2>
-        <h2>Progateのテスト</h2>
-        <h2>としてこのサイトを</h2>
-        <h2>使用中です。</h2>
+        <h2>ただのサメはProgateのテストとしてこのサイトを使用中です。</h2>
       </div>
       
       <div class="contents">
