--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       
       <div class="contents">
-        <h3 class="section-title">学べるレッスン</h3>
+        <h3 class="section-title">各種SNS</h3>
         <div class="contents-item">
           <img src="https://cdn.discordapp.com/attachments/998237777827213382/1208844665407668294/serg.jpg?ex=65e4c353&is=65d24e53&hm=ee0699ca95fdc583f30519faf015b3ef1c06c152bd7c999c772e3de67da5ef86&">
           <p>
