--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       
       <div class="contents">
-        <h3 class="section-title">各種SNS</h3>
+        <h3 class="section-title">学べるレッスン</h3>
         <div class="contents-item">
           <img src="https://cdn.discordapp.com/attachments/998237777827213382/1208844665407668294/serg.jpg?ex=65e4c353&is=65d24e53&hm=ee0699ca95fdc583f30519faf015b3ef1c06c152bd7c999c772e3de67da5ef86&">
           <p>
@@ -56,15 +56,15 @@
       </div>
     </div>
 
-    <div class="footer">
+    <!-- <div class="footer">
       <div class="footer-logo">ただのサメ</div>
       <div class="footer-list">
         <ul>
-          <!-- <li>会社概要</li>
+          <li>会社概要</li>
           <li>採用</li>
-          <li>お問い合わせ</li> -->
+          <li>お問い合わせ</li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
