--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HOME|ただのサメ公式</title>
+    <title>Home | ただのサメ</title>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/998237777827213382/1208871610518343730/c70a716a0bfd65f7.ico?ex=65e4dc6b&is=65d2676b&hm=9d406ec418247fd950e3c33d9c6623436d0b1ce8b7a2e24b2b22fad2251874f0&">
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
