--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>Home | ただのサメ</title>
     <link rel="icon" href="https://cdn.discordapp.com/attachments/998237777827213382/1208871610518343730/c70a716a0bfd65f7.ico?ex=65e4dc6b&is=65d2676b&hm=9d406ec418247fd950e3c33d9c6623436d0b1ce8b7a2e24b2b22fad2251874f0&">
     <link rel="stylesheet" href="stylesheet.css">
+    <!-- ここから下DiscordEmbed用 -->
+    <meta property="og:title" content="Home | ただのサメ">
+    <meta property="og:description" content="こちらはただのサメ公式ウェブサイトです。">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/998237777827213382/1208871610518343730/c70a716a0bfd65f7.ico?ex=65e4dc6b&is=65d2676b&hm=9d406ec418247fd950e3c33d9c6623436d0b1ce8b7a2e24b2b22fad2251874f0&">
+    <meta property="og:url" content="https://tadanosame.com">
+    <meta property="og:type" content="website">
   </head>
   <body>
     <div class="header">
