--- a/index.html
+++ b/index.html
@@ -33,27 +33,33 @@
       <div class="contents">
         <h3 class="section-title">各種SNS</h3>
         <div class="contents-item">
-          <img src="https://cdn.discordapp.com/attachments/998237777827213382/1208844665407668294/serg.jpg?ex=65e4c353&is=65d24e53&hm=ee0699ca95fdc583f30519faf015b3ef1c06c152bd7c999c772e3de67da5ef86&">
+          <img src="https://res.cloudinary.com/dalxb55ku/image/upload/v1709495133/spifhnknsth356q9fatb.jpg">
           <p>
             <a href="https://twitter.com/muryounosame">Twitter(新𝕏)</a>
           </p>
         </div>
         <div class="contents-item">
-          <img src="https://cdn.discordapp.com/attachments/998237777827213382/1208844956584910989/GitHub-Mark-ea2971cee799.png?ex=65e4c398&is=65d24e98&hm=9ff88b4eec27955cb586f47d112a46e170ab940a5b1cec8cbdd1a4de85e4f37b&">
+          <img src="https://res.cloudinary.com/dalxb55ku/image/upload/v1709495133/volh5v0sia2n6q6ctfky.png">
           <p>
             <a href="https://github.com/tadanosame">GitHub</a>
           </p>
         </div>
         <div class="contents-item">
-          <img src="https://cdn.discordapp.com/attachments/998237777827213382/1208846269666295838/360_F_588372425_Jb3PfIb3dtU53UNP3XJ2bWecY30O8IIq.jpg?ex=65e4c4d1&is=65d24fd1&hm=f23b0ffa197c245712b2de38a79bde3b5c8e0607abb76169895c1d549f25d38e&">
+          <img src="https://res.cloudinary.com/dalxb55ku/image/upload/v1709495132/i66qi8vlid8wjpnl8z8o.jpg">
           <p>
             <a href="https://discord.com/users/919197166306754602">Discord</a>
           </p>
         </div>
         <div class="contents-item">
-          <img src="https://cdn.discordapp.com/attachments/998237777827213382/1208848478675927050/Screenshot_20220728-021816.png?ex=65e4c6e0&is=65d251e0&hm=9658dd6231e524b304795407e468cfab38d8b554fda763e1f69f73d3850a805d&">
+          <img src="https://res.cloudinary.com/dalxb55ku/image/upload/v1709495134/cnfduok7pouwddyskgzu.jpg">
           <p>
             <a href="https://discord.gg/eYbxuT33K9">Discord Server(限界高専生の鯖)</a>
+          </p>
+        </div>
+        <div class="contents-item">
+          <img src="https://res.cloudinary.com/dalxb55ku/image/upload/v1709495393/kdvvp66jgbqqfw8gziof.png">
+          <p>
+            <a href="https://www.geartics.com/muryounosame">Geartics (ギアティクス)</a>
           </p>
         </div>
       </div>
