Google Analytics 追加

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Home | ただのサメ</title>
     <link rel="icon" href="https://res.cloudinary.com/dalxb55ku/image/upload/v1733327203/kj9crrnftrncicnxlpad.jpg">
     <link rel="stylesheet" href="stylesheet.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKQR1FMHJ0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HKQR1FMHJ0');
+    </script>
     <!-- ここから下DiscordEmbed用 -->
     <meta property="og:title" content="Home | ただのサメ">
     <meta property="og:description" content="こちらはただのサメ公式ウェブサイトです。">
